Update and rename 2018-05-22-全排列算法.md to 2018-05-22-全排列算法(不含重复元素).md

--- a/_posts/2018-05-22-全排列算法(不含重复元素).md
+++ b/_posts/2018-05-22-全排列算法(不含重复元素).md
@@ -1,7 +1,7 @@
-## 全排列算法
+## 全排列算法(不含重复元素)
 
 ### 背景
-全排列是一个比较经典和常见的问题，一些较大的公司可能会喜欢问这种经典算法问题。我希望通过这个博客来加深对全排列算法的理解，同时也归纳一下有多少种全排列的实现方法
+全排列是一个比较经典和常见的问题，一些较大的公司可能会喜欢问这种经典算法问题。我希望通过这个博客来加深对全排列算法的理解，同时也归纳一下有多少种全排列的实现方法  
 注意：本篇博客讨论的是无重复元素的全排列算法
 
 ### 递归算法
