Update and rename 2018-06-09-海量数据清洗算法题.md to 2018-06-09-海量数据处理算法题.md

--- a/_posts/2018-06-09-海量数据处理算法题.md
+++ b/_posts/2018-06-09-海量数据处理算法题.md
@@ -1,12 +1,12 @@
-## 海量数据清洗算法题
+## 海量数据处理算法题
 
 ### 题目1
 已知某个文件内包含一些电话号码，每个号码为8位数字，统计不同号码的个数。
 比如12345678、12345678、98765432，这三个号码中不同号码的个数是2个。
 
 ### 思路
-使用位图，每一个号码对应一个比特位，比如第一个比特位对应的电话号码是00000000，遍历每一个电话号码并设置相应的比特位，最后在位图中有多少个1就有多少个  
-不同的电话号码。
+使用位图，每一个号码对应一个比特位，比如第一个比特位对应的电话号码是00000000。8位数字最大就是999999999，所以就有999999999/8/1024/1024大约12M，用12M就能表示所有的8位数字。  
+遍历每一个电话号码并设置相应的比特位，最后在位图中有多少个1就有多少个不同的电话号码。
 
 ### 题目2
 有一个日志文件，里面每一行记录了在某天每一位用户访问网站的时间点，请问如何找出访问网站次数最多的用户？注意：日志文件中的记录超过1亿条,内存被限制在2G
