Update and rename 2018-06-16-深入理解Java7之volatile关键字.md to 2018-06-16-volatile关键字.md

--- a/_posts/2018-06-16-volatile关键字.md
+++ b/_posts/2018-06-16-volatile关键字.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      深入理解Java7之volatile关键字
+title:      volatile关键字
 date:       2018-06-01
 author:     BY 大雁小鱼
 catalog: true
@@ -9,10 +9,10 @@ tags:
 ---
 
 
-## 深入理解Java7之volatile关键字
+## volatile关键字
 
 ### 书本知识
-在深入理解Java7这本书中讲到volatile关键字的时候说，该关键字用来对共享变量的访问进行同步，对一个volatile变量的上一次写入操作和下一次读取操作之间存在“在之前发生“的顺序。所以下一次读取的值一定是上一次写入的值。
+在《深入理解Java7》这本书中讲到volatile关键字的时候说，该关键字用来对共享变量的访问进行同步，对一个volatile变量的上一次写入操作和下一次读取操作之间存在“在之前发生“的顺序。所以下一次读取的值一定是上一次写入的值。
 
 ### 网络知识
 在看书以前曾看过无数他人博客对这个关键字的解析，我梳理一下对这个关键字的理解。  
