--- a/_posts/2018-11-06-由@Resource引出的异常.md
+++ b/_posts/2018-11-06-由@Resource引出的异常.md
@@ -1,7 +1,7 @@
 ---
-layout:    post
-title:     Resource引出的异常
-subtitle:  Resource
+layout:     post
+title:      由@Resource引出的异常
+date:       2018-11-06
 author:     大雁小鱼
 catalog:    true
 tags:
