Update and rename 2019-01-06-源码安装mysql.md to 2019-01-06-源码安装mysql8.0.md

--- a/_posts/2019-01-06-源码安装mysql8.0.md
+++ b/_posts/2019-01-06-源码安装mysql8.0.md
@@ -1,4 +1,4 @@
-本博客记录源码安装MySQL的过程，请注意，我的机器环境是kali，使用的包管理工具命令是apt-get(kali如何安装，请参考:https://luyuanwan.github.io/2018/11/02/Kali安装教程/)  
+本博客记录源码安装MySQL8.0的过程，请注意，我的机器环境是kali，使用的包管理工具命令是apt-get(kali如何安装，请参考:https://luyuanwan.github.io/2018/11/02/Kali安装教程/)  
 
 1. 下载源码  
 mysql-server的源代码已经搬迁至github上面了， 所以源码可以从http://github.com/mysql下载，如果你觉得下载源码很慢，可以从我的网盘下载，分享地址是: https://pan.baidu.com/s/1s18dls96BWBEv7nTbpNtaA   
@@ -14,9 +14,10 @@ mysql-server的源代码已经搬迁至github上面了， 所以源码可以从h
    groupadd mysql   
    useradd -r -g mysql -s /bin/false mysql    
    进入mysql源码  
-   cmake . -DDOWNLOAD_BOOST=1 -DWITH_BOOST=. -DWITH_SSL=system  
+   cmake . -DDOWNLOAD_BOOST=1 -DWITH_BOOST=. -DWITH_SSL=system -DCMAKE_INSTALL_PREFIX=/root/mysql
    make  
-   经过漫长的编译完后(在我的一台老旧的双核机器上花费约1个半小时)，就能在
+   make install  
+   经过漫长的编译完后(在我的一台老旧的双核机器上花费约2个半小时)，就能在/root/mysql目录下找到安装的MYSQL了
    
 4. 运行  
    bin/mysqld_safe --user=mysql &
